page test de click